--- a/_posts/2024-10-27-1.md
+++ b/_posts/2024-10-27-1.md
@@ -12,11 +12,9 @@ tags:
 
 ## 前言
 
-***$\color{red}\text{第一次访问会非常、非常慢！！}$***
+为了保证整个页面***加载速度***，添加了标签 `preload="none"`，使得音频不会**预加载**，只有当点击播放时才会加载（并由 Service Worker 缓存）。
 
-这是因为 Service Worker 正在进行缓存，因此会下载约 **$2GB$** 的数据。
-
-也考虑到浏览器性能问题，因此请**$\color{red}\text{耐心等待}$**。
+~~不然这个页面是可以卡死的......~~
 
 ***
 
@@ -539,3 +537,43 @@ Markdown/html插入源码：
 ### 122.闻人听書_ - 一念一生叹
 
 <audio preload="none" controls src="/music/122.mp3"></audio>
+
+### 123.L（桃籽） - 我宁愿喝到吐也不再为你哭
+
+<audio preload="none" controls src="/music/123.mp3"></audio>
+
+### 124.L（桃籽） - 别羡慕他人的光
+
+<audio preload="none" controls src="/music/124.mp3"></audio>
+
+### 125.L（桃籽） - 总有一束光只为你而来
+
+<audio preload="none" controls src="/music/125.mp3"></audio>
+
+### 126.尹昔眠 - 诀别曲
+
+<audio preload="none" controls src="/music/126.mp3"></audio>
+
+### 127.a_hisa - Caravan
+
+<audio preload="none" controls src="/music/127.mp3"></audio>
+
+### 128.The xx - Intro
+
+<audio preload="none" controls src="/music/128.mp3"></audio>
+
+### 129.L（桃籽） - 死去的爱情
+
+<audio preload="none" controls src="/music/129.mp3"></audio>
+
+### 130.泽国同学 - 折风渡夜
+
+<audio preload="none" controls src="/music/130.mp3"></audio>
+
+### 131.Alan Walker _ Flo Rida - When I Grow Up (Young, Wild & Free)
+
+<audio preload="none" controls src="/music/131.mp3"></audio>
+
+### 132.L（桃籽） - 过客而已何必多情
+
+<audio preload="none" controls src="/music/132.mp3"></audio>
