--- a/_posts/2024-10-27-1.md
+++ b/_posts/2024-10-27-1.md
@@ -577,3 +577,79 @@ Markdown/html插入源码：
 ### 132.L（桃籽） - 过客而已何必多情
 
 <audio preload="none" controls src="/music/132.mp3"></audio>
+
+### 133.小炎同学 - 这一路山高水长
+
+<audio preload="none" controls src="/music/133.mp3"></audio>
+
+### 134.邓寓君(等什么君) - 飞花入梦
+
+<audio preload="none" controls src="/music/134.mp3"></audio>
+
+### 135.陈雪凝 - 何必迁就
+
+<audio preload="none" controls src="/music/135.mp3"></audio>
+
+### 136.陈雪凝 - 忘记被忘记
+
+<audio preload="none" controls src="/music/136.mp3"></audio>
+
+### 137.L（桃籽） - 只是刚好
+
+<audio preload="none" controls src="/music/137.mp3"></audio>
+
+### 138.L（桃籽） - 断不了情
+
+<audio preload="none" controls src="/music/138.mp3"></audio>
+
+### 139.王力宏 - 天地龙鳞
+
+<audio preload="none" controls src="/music/139.mp3"></audio>
+
+### 140.周杰伦 - 稻香
+
+<audio preload="none" controls src="/music/140.mp3"></audio>
+
+### 141.吉星出租 - 转身即心痛
+
+<audio preload="none" controls src="/music/141.mp3"></audio>
+
+### 142.浅影阿 _ 汐音社 - 探故知
+
+<audio preload="none" controls src="/music/142.mp3"></audio>
+
+### 143.Babystop_山竹 _ 伊笑 - 鸳鸯戏
+
+<audio preload="none" controls src="/music/143.mp3"></audio>
+
+### 144.邓寓君(等什么君) - 鸳鸯戏
+
+<audio preload="none" controls src="/music/144.mp3"></audio>
+
+### 145.张德伊玲 - 偷一颗星照亮你
+
+<audio preload="none" controls src="/music/145.mp3"></audio>
+
+### 146.梨笑笑 - 山茶花读不懂白玫瑰
+
+<audio preload="none" controls src="/music/146.mp3"></audio>
+
+### 147.郑浩 _ 冰洁 - 春不晚（with 冰洁）
+
+<audio preload="none" controls src="/music/147.mp3"></audio>
+
+### 148.张德伊玲 - 渡南柯
+
+<audio preload="none" controls src="/music/148.mp3"></audio>
+
+### 149.L（桃籽） - 来世愿做一朵莲
+
+<audio preload="none" controls src="/music/149.mp3"></audio>
+
+### 150.邓寓君(等什么君) - 春不晚
+
+<audio preload="none" controls src="/music/150.mp3"></audio>
+
+### 151.张德伊玲 - 故事总是这样
+
+<audio preload="none" controls src="/music/151.mp3"></audio>
