--- a/_posts/2024-10-27-1.md
+++ b/_posts/2024-10-27-1.md
@@ -44,6 +44,10 @@ Markdown/html插入源码：
 
 `.mp3` 都是**有损**压缩过的，主要是挂Cloudflare缓存搞CDN。`.flac` 母带无损可以参考[此处](https://share.feijipan.com/s/DNC5iGc1)。
 
+***
+
+考虑到 `.mp3` 有损压缩，建议配合[FxSound](https://www.fxsound.com/)食用。
+
 ## 仓库
 
 ### 1.陈雪凝 - 你的酒馆对我打了烊
