--- a/_posts/2024-10-27-1.md
+++ b/_posts/2024-10-27-1.md
@@ -12,6 +12,10 @@ tags:
 
 ## 前言
 
+[（配合FxSound）体验更佳](https://cfyy.us.kg/project/html-music-player)
+
+***
+
 为了保证整个页面***加载速度***，添加了标签 `preload="none"`，使得音频不会**预加载**，只有当点击播放时才会加载（并由 Service Worker 缓存）。
 
 ~~不然这个页面是可以卡死的......~~
