--- a/_posts/2024-10-27-1.md
+++ b/_posts/2024-10-27-1.md
@@ -661,3 +661,11 @@ Markdown/html插入源码：
 ### 151.张德伊玲 - 故事总是这样
 
 <audio preload="none" controls src="/music/151.mp3"></audio>
+
+### 152.善宇 - 向阳生长
+
+<audio preload="none" controls src="/music/152.mp3"></audio>
+
+### 153.闻人听書_ - 春不晚（相思版）
+
+<audio preload="none" controls src="/music/153.mp3"></audio>
