--- a/_posts/2024-10-27-1.md
+++ b/_posts/2024-10-27-1.md
@@ -12,7 +12,7 @@ tags:
 
 ## 前言
 
-[（配合FxSound）体验更佳](https://cfyy.us.kg/project/html-music-player)
+[（配合FxSound）体验更佳](/project/html-music-player)
 
 ***
 
