--- a/_posts/2024-11-09-2.md
+++ b/_posts/2024-11-09-2.md
@@ -16,6 +16,8 @@ tags:
 
 一个静态音乐播放器。
 
+~~作为一个从来没学过html/css/js的人，我想能写成这样已经很好了。~~
+
 ### 使用方法
 
 访问项目地址即可，在 `/XPlayer` 后可以加上 `/#1`，表示播放第一首歌曲，同样有 `/#2`、`/#3`、`/#4` 等，但注意如果超出了歌曲总数，或是小于 $1$，那么会随机跳歌。
@@ -25,6 +27,15 @@ tags:
 ### 随机跳歌
 
 建议使用 `/#0`，因为曲库会不定期更新。
+
+### 键盘操作
+
+* 空格：暂停/继续播放。
+* $\uparrow$：上一首。
+* $\downarrow$：下一首。​​
+
+* $\leftarrow$：快退 $10s$。
+* $\rightarrow$：快进 $10s$。
 
 ### 鸣谢
 
