--- a/_posts/2024-11-09-2.md
+++ b/_posts/2024-11-09-2.md
@@ -4,7 +4,7 @@ title: "XPlayer使用指南"
 subtitle: ""
 date: 2024-11-09
 author: "TH911"
-header-img: "img/bg/6.jpeg"
+header-img: "img/2024/11/001.png"
 header-mask: 0.4
 tags:
   - XPlayer
