--- a/_posts/2024-10-23-1.md
+++ b/_posts/2024-10-23-1.md
@@ -9,11 +9,8 @@ header-mask: 0.4
 tags:
   - 题解
   - 状态压缩
-  - 哈希
-  - map
+  - 哈希题目
 ---
-
-# 题目
 
 > | 时间限制 | 空间限制 |  输入文件名   |   输出文件名   |
 >| :------: | :------: | :-----------: | :------------: |
