--- a/_posts/2024-10-23-2.md
+++ b/_posts/2024-10-23-2.md
@@ -94,7 +94,7 @@ tags:
 
 ### 前置知识：二维数点
 
-参见[离线扫描线二位数点](/2024/10/23/3/)。
+参见[离线扫描线二维数点](/2024/10/23/3/)。
 
 ### 解决策略
 
@@ -205,7 +205,7 @@ vector<int>a[N+1];
 int cnt=0;
 void dfs(int x,int y,ll g,int lst){
 	if(lst<=top&&1ll*x*p[lst]*p[lst]>N&&1ll*y*p[lst]*p[lst]>N){
-		a[x].push_back(y);//供二位数点加入使用
+		a[x].push_back(y);//供二维数点加入使用
 		return;
 	}
 	for(ll i=0,pi=x;pi<=N;i++,pi*=p[lst]){
@@ -225,7 +225,7 @@ void Start(){
 			for(int j=i;j<=N;j+=i)vis[j]=true;
 		}
 	}dfs(1,1,0,1);
-}//二位数点：权值树状数组
+}//二维数点：权值树状数组
 int t[N+1];
 int lowbit(int x){
 	return x&-x;
