--- a/_posts/2024-11-10-1.md
+++ b/_posts/2024-11-10-1.md
@@ -105,11 +105,11 @@ tags:
 
 形式化的来讲，不妨令 $\min(a_1,a_2,a_3,\cdots,a_n)>1$。
 
-则答案必定为 $\bigg(\Big(\big(({a_1}^{a_2})^{a_3}\big)^\cdots\Big)^{a_{n-1} }\bigg)^{a_n}$，也就是 `(((a_1^a_2)^a_3)^...)^a_n`。
+则答案必定为 $\left(\left(\left(\left({a_1}^{a_2}\right)^{a_3}\right)^\cdots\right)^{a_{n-1} }\right)^{a_n}$，也就是 `(((a_1^a_2)^a_3)^...)^a_n`。
 
 ***
 
-从 $n=3$ 时入手，即比较 $\large({a_1}^{a_2})^{a_3}$ 和 $\large{a_1}^{ {a_2}^{a_3} }$，那么 $\large({a_1}^{a_2})^{a_3}<{a_1}^{ {a_2}^{a_3} }$ 恒成立。
+从 $n=3$ 时入手，即比较 $\large\left({a_1}^{a_2}\right)^{a_3}$ 和 $\large{a_1}^{ {a_2}^{a_3} }$，那么 $\large\left({a_1}^{a_2}\right)^{a_3}<{a_1}^{ {a_2}^{a_3} }$ 恒成立。
 
 证明：
 
@@ -121,11 +121,11 @@ $\therefore a_2\times a_3<{a_2}^{a_3}$
 
 $\therefore {a_1}^{a_2\times a_3}<{a_1}^{ {a_2}^{a_3} }$
 
-又 $\large\because ({a_1}^{a_2})^{a_3}={a_1}^{a_2\times a_3}$
+又 $\large\because \left({a_1}^{a_2}\right)^{a_3}={a_1}^{a_2\times a_3}$
 
 $\therefore \large({a_1}^{a_2})^{a_3}<{a_1}^{ {a_2}^{a_3} }$
 
-推广至 $1\sim n$，则 $\bigg(\Big(\big(({a_1}^{a_2})^{a_3}\big)^\cdots\Big)^{a_{n-1} }\bigg)^{a_n}$ 最小。
+推广至 $1\sim n$，则 $\left(\left(\left(\left({a_1}^{a_2}\right)^{a_3}\right)^\cdots\right)^{a_{n-1} }\right)^{a_n}$ 最小。
 
 ***
 
