--- a/_posts/2024-11-10-2.md
+++ b/_posts/2024-11-10-2.md
@@ -164,3 +164,11 @@ int main(){
 }
 ```
 
+## 后记
+
+本人测试原题数据时，发现如果随机化贪心次数超过 $10^6$ 次，即使贪心策略只有 `rand%2` ~~（猴子算法）~~，也大概率能过。
+
+因此，不建议将本题作为随机化贪心练习题。
+
+**况且，正常做法是需要赋权后取模，在本题中就是依照子树大小赋权值随机化后使得子树越大随机化否定的概率越小**。
+
