--- a/_posts/2024-11-13-1.md
+++ b/_posts/2024-11-13-1.md
@@ -101,3 +101,5 @@ tags:
 举个例子，掷骰（**$\text t\acute{\text o}\text u$**）子，每个面掷到的概率都是 $\frac16$，那么掷到的数的**期望**为：$1\times\frac16+2\times\frac16+3\times\frac16+4\times\frac16+5\times\frac16+6\times\frac16=\frac72$。
 
 ### **题意分析**
+
+首先，由于期望的
