XPlayer:update the player

--- a/_posts/2024-11-09-2.md
+++ b/_posts/2024-11-09-2.md
@@ -40,3 +40,5 @@ tags:
 ### 鸣谢
 
 由[wayou](https://github.com/wayou)开发的[selected项目](https://github.com/wayou/selected)，XPlayer正是基于此之上才出现的。
+
+由[Dandelion](https://dandelion-drq.github.io/)开发的[html demo项目](https://gitee.com/Dandelion_/html_demo)，XPlayer的播放器正是基于其中的[H5-audio](https://gitee.com/Dandelion_/html_demo/tree/master/H5-audio)。[参考链接](https://dandelion-drq.github.io/2017/08/28/H5-audio-demo.html)
