--- a/_posts/2024-11-09-1.md
+++ b/_posts/2024-11-09-1.md
@@ -12,6 +12,7 @@ tags:
   - 单调队列
   - 前缀和
   - 贪心
+  - 未完
 ---
 
 > [题目传送门](https://www.luogu.com.cn/problem/P5665)
@@ -23,6 +24,83 @@ tags:
 ## AC代码
 
 ```cpp
+//#include<bits/stdc++.h>
+#include<algorithm> 
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std;
+typedef long long ll;
+typedef __int128 lll;
+const int N=4e7,M=1e5;
+const int mod=(1<<30);
+int n,type,x,y,z,m;
+int a[N+1],b[N+1],p[M+1],l[M+1],r[M+1],q[N+1],pre[N+1];
+ll sum[N+1];
+inline ll d(int x){
+	return sum[x]-sum[pre[x]];
+}
+template<typename T>
+void Write(T x){
+	static char s[101];
+	int top=0;
+	do{
+		s[++top]=x%10+'0';
+		x/=10;
+	}while(x);
+	while(top)putchar(s[top--]);
+}
+//读入&数据生成 
+void Start(){
+	scanf("%d %d",&n,&type);
+	if(type){
+		scanf("%d %d %d %d %d %d",&x,&y,&z,b+1,b+2,&m);
+	    for(int i=1;i<=m;i++)scanf("%d %d %d",p+i,l+i,r+i);
+	    for(int i=3;i<=n;i++)b[i]=(1ll*b[i-1]*x+1ll*b[i-2]*y+z)%mod;
+	    for(int j=1;j<=m;j++){
+	    	for(int i=p[j-1]+1;i<=p[j];i++){
+				a[i]=(b[i]%(r[j]-l[j]+1))+l[j];
+			}
+		}
+	}else{
+		for(int i=1;i<=n;i++)scanf("%d",a+i);
+	}for(int i=1;i<=n;i++)sum[i]=sum[i-1]+a[i];
+}
+int main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+	
+	Start();
+	int h=0,t=0;
+	//单调队列 
+	for(int i=1;i<=n;i++){
+    	while(h<t&&d(q[h+1])+sum[q[h+1]]<=sum[i])h++; 
+		pre[i]=q[h];
+	    while(h<t&&d(q[t])+sum[q[t]]>=d(i)+sum[i])t--;
+	    q[++t]=i;
+	}
+	int p=n;
+	lll ans=0;
+	while(p){
+		lll pl=d(p);
+		ans+=pl*pl;
+		p=pre[p];
+	}Write(ans);
+	putchar(10);
+	
+	/*fclose(stdin);
+	fclose(stdout);*/
+	return 0;
+}
 ```
 
 
