--- a/_posts/2024-11-13-1.md
+++ b/_posts/2024-11-13-1.md
@@ -11,6 +11,7 @@ tags:
   - 期望
   - 概率
   - 数学
+  - 未完
 ---
 
 ## 题目
@@ -92,6 +93,10 @@ tags:
 
 ## 题解
 
+### 概率取模
+
+看到概率要取模，你可能会想你不会分数取模，但是这其实不要紧......因为答案和其余运算全都是模 $P$ 意义下的，直接当整数运算即可。
+
 ### 期望
 
 首先，我们要明白期望到底是个什么东西。
@@ -102,4 +107,83 @@ tags:
 
 ### **题意分析**
 
-首先，由于期望的线性性，我们可以直接算出期望排名。**怎么算请看后文**。
+首先，由于期望的线性性，我们可以直接算出排名期望。**怎么算请看后文**。
+
+我们将 $2n$ 个数全部放入数组 $t$，$t.v$ 表示其值，$t.p$ 表示其概率。
+
+那么，$t$ 的期望就为 $t.p\times t.v\times E$，其中 $E$ 表示 $t$ 的排名的期望。
+
+
+
+## AC代码
+
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm> 
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std;
+typedef long long ll;
+const int P=1000000007,N=5e6;
+int n,top,ans;
+struct node{
+	ll v,p;
+}t[2*N+1];
+//快读
+inline char gc(){
+	static int p1,p2;
+	static char buf[1<<20];
+	if(p1==p2){
+		p2=fread(buf,1,1<<20,stdin);
+		p1=0;
+	}if(p1==p2)return EOF;
+	return buf[p1++];
+}
+template<typename T>
+inline void Read(T &x){
+	x=0;
+	T f=1;
+	char ch=gc();
+	for(;ch<'0'||'9'<ch;ch=gc())if(ch=='-')f=-1;
+	for(;'0'<=ch&&ch<='9';ch=gc())x=(x<<3)+(x<<1)+(ch^48);
+	x*=f;
+}
+inline bool cmp(node &a,node &b){
+	return a.v<b.v;
+}
+int main(){
+	freopen("good.in","r",stdin);
+	freopen("good.out","w",stdout);
+	
+	Read(n);
+	for(int i=1;i<=n;i++){
+		ll a,b,p,q;
+		Read(a);Read(b);Read(p);Read(q);
+		t[i]={a,p};
+		t[i+n]={b,q};
+        //减去同时出现的错误期望
+		ans-=p*q%P*max(a,b)%P;
+		ans%=P;
+	}sort(t+1,t+2*n+1,cmp);
+	ll pl=0;
+	for(int i=1;i<=2*n;i++){
+		ans=(ans+t[i].p*t[i].v%P*(pl+1)%P)%P;
+		pl=(pl+t[i].p)%P;
+	}printf("%lld\n",ans);
+	
+	fclose(stdin);
+	fclose(stdout);
+	return 0;
+}
+```
+
