--- a/_posts/2024-10-25-1.md
+++ b/_posts/2024-10-25-1.md
@@ -79,7 +79,7 @@ tags:
 对于 $i$ 遍历 $1\sim m$，若 $i<r$，都可以确定：
 
 $$
-\large p_i\geq \min(p_{2\times mid+1},r-i+1)
+\large p_i\geq \min\left(p_{2\times mid+1},r-i+1\right)
 $$
 
 首先，取最小值是为了防止越出 $r$ 的范围，很好理解。
@@ -92,7 +92,7 @@ $$
 
 那么以 $j$ 为中心的最长回文串（$\color{#FF7F27}\colorbox{#FF7F27}{1}$ 橙色部分）也是关于 $mid$ 对称，则 $\color{#ED1C24}\colorbox{#ED1C24}{1}$ 红色部分同样回文且其为 $\color{#FF7F27}\colorbox{#FF7F27}{1}$ 橙色部分的反转字符串（事实上，一个回文字符串无论如何反转，都是不变的，也就是说，两部分其实是**全等**的）。
 
-那么 $p_i$ 就可以直接赋值为 $\min(p_{2\times mid+1},r-i+1)$，然后再进行**暴力向两边扩展**的操作即可。
+那么 $p_i$ 就可以直接赋值为 $\min\left(p_{2\times mid+1},r-i+1\right)$，然后再进行**暴力向两边扩展**的操作即可。
 
 ### 统计答案
 
@@ -116,7 +116,7 @@ $$
 
   整个回文字符串长度为：$2\times\frac{ans}2=ans$。考虑到回文中心计算了两次，则最终答案为 $ans-1$。
 
-故答案为 $(\max\limits_{i=1}^mp_i)-1$。
+故答案为 $ans-1=\left(\max\limits_{i=1}^mp_i\right)-1$。
 
 ## 时间复杂度分析
 
