--- a/_posts/2024-11-13-2.md
+++ b/_posts/2024-11-13-2.md
@@ -9,95 +9,238 @@ header-mask: 0.4
 tags:
   - 题解
   - 线段树
+  - 未完
 ---
+
+> | 时间限制 | 空间限制 | 输入文件名 | 输出文件名  |
+> | :------: | :------: | :--------: | :---------: |
+> | $1000ms$ | $512MB$  | `title.in` | `title.out` |
 
 ## 题目
 
-> | 时间限制 | 空间限制 | 输入文件名 | 输出文件名 |
-> | :------: | :------: | :--------: | :--------: |
-> | $3000ms$ | $512MB$  | `good.in`  | `good.out` |
-
 ### 题目描述
 
-给定两个长度为 $n$ 的序列 $a$ 和 $b$。
+给定长度为 $n$ 的序列 $a$。
 
-从 $1$ 扫到 $n$，对于第 $i$ 个数，会有三种可能的操作：
-
-1. 将 $a_i$ 加入数组 $c$，概率为 $p_i$。
-2. 将 $b_i$ 加入数组 $c$，概率为 $q_i$。
-3. 什么都不干，概率为 $1-p_i-q_i$。
-
-记 $d$ 为  $c$从小到大排序后的数组，问 $\sum\limits_{i=1}^{\vert d\vert }i\times d_i$ 的期望，答案对 $P=10^9+7$ 取模。
+$q$ 次询问，每次给出 $l,r$。求 $\max\limits_{l\leq x\leq y\leq z\leq r\and y-x\leq z-y}\left(a_x+a_y+a_z\right)$。如果不存在 $x,y,z$ 满足条件，输出 `No solution`。
 
 ### 输入格式
 
-输入的第一行包含一个正整数 $n$，保证 $n\leq5\times10^6$。
+从文件 `title.in` 中读入数据。
 
-接下来 $n$ 行每行包含 $4$ 个非负整数 $a_i,b_i,p_i',q_i'$。其中 $p_i',q_i'$ 分别表示 $p_i, q_i$ 在模 $P$ 意义下的值。保证 $0\leq a_i,b_i,p_i',q_i'<P$。
+输入的第一行包含两个正整数 $n, m$ 分别表示序列的长度和询问次数。
+
+第二行包含 $n$ 个正整数，其中第 $i$ 个数表示 $a_i$。
+
+接下来 $m$ 行，每行两个正整数 $l, r$，表示一次询问。保证 $1 \le l \le r \le n$。
 
 ### 输出格式
 
-输出一个数，表示最后的答案。
+输出到文件 `title.out` 中。
+
+输出共 $m$ 行，第 $i$ 行表示第 $i$ 个询问的答案。
 
 ### 输入输出样例
 
 #### 输入样例
 
 ```
+1 1
 1
-0 1 499122177 499122177
+1 1
 ```
 
 #### 输出样例
 
 ```
-499122177
+No solution
 ```
 
 ### 说明/提示
 
 #### 样例解释
 
-最后的序列 $d$ 有两种情况：
-
-1. $0$，概率在模 $P$ 意义下为 $499122177$，贡献为 $0\times499122177=0$。
-2. $1$，概率在模 $P$ 意义下为 $499122177$，贡献为 $1\times499122177=499122177$。
-
-故最后的期望为 $499122177$。
+询问的 $l=r=1$，此时 $r-l+1<3$，故输出 `No solution`。
 
 #### 数据范围
 
-|   测试点   |    $n\leq$    |   特殊性质   |
-| :--------: | :-----------: | :----------: |
-|    $1$     |     $14$      | 保证 $q_i=0$ |
-|    $2$     |     $14$      |      无      |
-|   $3,4$    |     $500$     | 保证 $q_i=0$ |
-|   $5,6$    |     $500$     |      无      |
-|   $7,8$    |    $5000$     | 保证 $q_i=0$ |
-|   $9,10$   |    $5000$     |      无      |
-|    $11$    | $5\times10^5$ | 保证 $q_i=0$ |
-|    $12$    |    $10^6$     | 保证 $q_i=0$ |
-|    $13$    | $3\times10^6$ | 保证 $q_i=0$ |
-|    $14$    | $5\times10^6$ | 保证 $q_i=0$ |
-| $15\sim17$ | $5\times10^5$ |      无      |
-|    $18$    |    $10^6$     |      无      |
-|    $19$    | $3\times10^6$ |      无      |
-|    $20$    | $5\times10^6$ |      无      |
+对于所有测试数据保证：$1\le n,m\le5\times10^5,1\le a_i\le10^9$。
+
+|   测试点   |    $n\leq$    |    $q\leq$    | 特殊性质 |
+| :--------: | :-----------: | :-----------: | :------: |
+|    $1$     |    $10^2$     |    $10^2$     |    有    |
+|    $2$     |    $10^2$     |    $10^2$     |    无    |
+|    $3$     |     $500$     |     $500$     |    有    |
+|    $4$     |     $500$     |     $500$     |    无    |
+|    $5$     |    $5,000$    |      $5$      |    有    |
+|    $6$     |    $5,000$    |      $5$      |    无    |
+|    $7$     |    $5,000$    |    $5,000$    |    有    |
+|    $8$     |    $5,000$    |    $5,000$    |    无    |
+|    $9$     |    $5,000$    | $5\times10^5$ |    有    |
+|  $10,11$   |    $5,000$    | $5\times10^5$ |    无    |
+| $12\sim14$ | $5\times10^5$ |      $5$      |    有    |
+| $15\sim17$ | $5\times10^5$ |      $5$      |    无    |
+| $18\sim20$ | $5\times10^5$ | $5\times10^5$ |    无    |
+
+特殊性质：保证 $a_i$ 在 $1\sim10^9$ 之间均匀随机生成。
 
 #### 附件
 
-[good.zip](/file/2024/11/good.zip)
+[title.zip](/file/2024/11/title.zip)
 
 ## 题解
 
-### 期望
+## AC代码
 
-首先，我们要明白期望到底是个什么东西。
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm> 
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std;
+//#define getchar getchar_unlocked
+//#define putchar putchar_unlocked
+#define int long long
+typedef long long ll;
+const int N=5e5,M=5e5;
+int n,m,a[N+1],ans[N+1]; 
+struct question{
+	int l,r,id;
+}q[M+1];
+vector<int>p[N+1];
+struct node{
+	int l,r;
+	ll value,ans,tag;
+}t[4*N+1];
+inline void up(int p){
+	t[p].value=max(t[p*2].value,t[p*2+1].value);
+	t[p].ans=max(t[p*2].ans,t[p*2+1].ans);
+}
+void build(int p,int l,int r){
+	t[p].l=l,t[p].r=r;
+	if(l==r){
+		t[p].value=a[l];
+		return;
+	}
+	int mid=(l+r)/2;
+	build(p*2,l,mid);
+	build(p*2+1,mid+1,r);
+	up(p);
+}
+bool cmp(question &a,question &b){
+	return a.l<b.l;
+}
+inline void down(int p){
+	if(t[p].tag){
+		t[p*2].tag=max(t[p*2].tag,t[p].tag);
+		t[p*2].ans=max(t[p*2].ans,t[p*2].value+t[p].tag);
+		t[p*2+1].tag=max(t[p*2+1].tag,t[p].tag);
+		t[p*2+1].ans=max(t[p*2+1].ans,t[p*2+1].value+t[p].tag);
+		t[p].tag=0;
+	}
+}
+void solve(int p,int l,int r,ll tag){
+	if(l<=t[p].l&&t[p].r<=r){
+		t[p].tag=max(t[p].tag,tag);
+		t[p].ans=max(t[p].ans,t[p].value+tag);
+		return;
+	}
+	if(t[p].tag)down(p);
+	int mid=(t[p].l+t[p].r)/2;
+	if(l<=mid)solve(p*2,l,r,tag);
+	if(mid+1<=r)solve(p*2+1,l,r,tag);
+	up(p);
+}
+ll query(int p,int l,int r){
+	if(l<=t[p].l&&t[p].r<=r)return t[p].ans;
+	down(p);
+	int mid=(t[p].l+t[p].r)/2;
+	ll ans=-2147483647;
+	if(l<=mid)ans=max(ans,query(p*2,l,r));
+	if(mid+1<=r)ans=max(ans,query(p*2+1,l,r));
+	return ans;
+}
+inline char gc(){
+	static int p1,p2;
+	static char buf[1<<20];
+	if(p1==p2){
+		p2=fread(buf,1,1<<20,stdin);
+		p1=0;
+	}if(p1==p2)return EOF;
+	return buf[p1++];
+}
+template<typename T>
+inline void Read(T &x){
+	x=0;
+	T f=1;
+	char ch=gc();
+	for(;ch<'0'||'9'<ch;ch=gc())if(ch=='-')f=-1;
+	for(;'0'<=ch&&ch<='9';ch=gc())x=(x<<3)+(x<<1)+(ch^48);
+	x*=f;
+}
+template<typename T>
+inline void Write(T x){
+	static char s[101];
+	int top=0;
+	do{
+		s[++top]=x%10+'0';
+		x/=10;
+	}while(x);
+	while(top)putchar(s[top--]);
+}
+main(){
+	freopen("title.in","r",stdin);
+	freopen("title.out","w",stdout);
+	
+	Read(n);Read(m);
+	for(int i=1;i<=n;i++)Read(a[i]);
+	for(int i=1;i<=m;i++){
+		Read(q[i].l);Read(q[i].r);
+		q[i].id=i;
+		if(q[i].r-q[i].l+1<3)ans[i]=-2147483647;
+	}stack<int>s;
+	for(int i=1;i<=n;i++){
+		while(s.size()&&a[s.top()]<a[i])s.pop();
+		if(s.size())p[s.top()].push_back(i);
+		s.push(i);
+	}while(s.size())s.pop();
+	for(int i=n;i>=1;i--){
+		while(s.size()&&a[s.top()]<a[i])s.pop();
+		if(s.size())p[i].push_back(s.top());
+		s.push(i);
+	}
+	build(1,1,n);
+	sort(q+1,q+m+1,cmp);
+	int top=m;
+	for(int i=n;i>=1;i--){
+		for(int j=0;j<p[i].size();j++){
+			if(2*p[i][j]-i<=n)solve(1,2*p[i][j]-i,n,a[i]+a[p[i][j]]);
+		}
+		while(top&&q[top].l==i){
+			if(!ans[q[top].id])ans[q[top].id]=query(1,q[top].l,q[top].r);
+			top--;
+		}
+	}for(int i=1;i<=m;i++){
+		if(ans[i]<0)printf("No solution\n");
+		else{
+			Write(ans[i]);
+			putchar(10);
+		}
+	}
+	
+	fclose(stdin); 
+	fclose(stdout);
+	return 0;
+}
+```
 
-可以理解为**平均值**，其实就是**每种情况的值与其出现概率之积的总和**。
-
-举个例子，掷骰（**$\text t\acute{\text o}\text u$**）子，每个面掷到的概率都是 $\frac16$，那么掷到的数的**期望**为：$1\times\frac16+2\times\frac16+3\times\frac16+4\times\frac16+5\times\frac16+6\times\frac16=\frac72$。
-
-### **题意分析**
-
-首先，由于期望的
