--- a/_posts/2024-11-14-2.md
+++ b/_posts/2024-11-14-2.md
@@ -40,11 +40,21 @@ tags:
 
 **注意：不可直接判断边，需要跑图**。
 
-因为可能存在于类似 $a<b\and b<c$ 的情况，此时 $a<c$ 依然成立，但 $a,c$ 之间没有边。
+因为可能存在于类似 $a<b\and b<c$​ 的情况，此时 $a<c$ 依然成立，但 $a,c$ 之间没有边。
 
 然后判断能否钦定 $u<v$，就先在建的图上判断 $u,v$ 是否联通，联通则代表不能钦定。
 
 最后按照顺序输出即可。
+
+<details>
+    <summary>
+        <span style="color: blue;">为什么可以使用图？（点击展开）</span>
+    </summary>
+    <p>
+    	这其实就涉及到图的本质了。
+        图本质就是多对多元素间的关系，所以不要被局限了。
+    </p>
+</details>
 
 ### 输出
 
