--- a/_posts/2024-10-19-2.md
+++ b/_posts/2024-10-19-2.md
@@ -6,6 +6,8 @@ date: 2024-10-19
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
+no-catalog: true
+published: false
 ---
 
 用于记录想说的话。
