--- a/_posts/2024-11-15-2.md
+++ b/_posts/2024-11-15-2.md
@@ -6,9 +6,11 @@ date: 2024-11-15
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
+published: false
 tags:
   - 题解
   - 提高+/省选−
   - 树链剖分
+  - 未完
 ---
 
