--- a/_posts/2024-11-16-2.md
+++ b/_posts/2024-11-16-2.md
@@ -39,7 +39,9 @@ tags:
 
 图示：
 
-![](https://cdn.luogu.com.cn/upload/image_hosting/ktoi611a.png)
+![](/img/2024/11/006.png)
+
+
 
 当 $L\in[dl_i+1,l_i],R\in[i,r_i-1]$ 时，则合法区间数为 $\left(l_i-\left(dl_i+1\right)+1\right)\left(\left(r_i-1\right)-i+1\right)=(l_i-dl_i)(r_i-i)$。
 
@@ -120,7 +122,7 @@ tags:
 
 ## AC代码
 
-```cpp
+```!cpp
 //#include<bits/stdc++.h>
 #include<algorithm> 
 #include<iostream>
