--- a/_posts/2024-10-23-2.md
+++ b/_posts/2024-10-23-2.md
@@ -1,12 +1,11 @@
 ---
 layout: post
 title: "题解：未命名 1"
-subtitle: "题目见正文|题目名称真的长这样！"
+subtitle: "题目见正文"
 date: 2024-10-23
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
-published: false
 tags:
   - 题解
   - 数学
@@ -14,10 +13,6 @@ tags:
   - 扫描线
   - 二维数点
 ---
-
-关于题目名称：
-
-![](/img/2024/10/020.png)
 
 ## 题目
 
