--- a/_posts/2024-10-25-1.md
+++ b/_posts/2024-10-25-1.md
@@ -71,7 +71,7 @@ tags:
 
 令 $r$ 为当前**已确定的、最远的**回文串右边界。即：$r=\max \limits_{i=1}^m(i+p_i-1)$。
 
-令 $mid$ 为当前**已确定的、最远的**回文串回文中心。即：$mid=\Big\lfloor\dfrac{r+1}{2}\Big\rfloor$
+令 $mid$ 为当前**已确定的、最远的**回文串回文中心。
 
 令字符串 $a$ 是 $s$ 插入后的字符串，从下标为 $1$ 开始存储。
 
