--- a/_posts/2024-10-25-2.md
+++ b/_posts/2024-10-25-2.md
@@ -64,7 +64,7 @@ $$
 
 设 $\large f_i=\sum\limits_{j=1}^i(x_j+y_j-k)$，则有 $\large f_m\geq x+y$。
 
-设 $m=q_in+i$，其中 $i=m\bmod n$（或 $i=n$）。
+设 $m=qn+i$，其中 $i=m\bmod n$（或 $i=n$）。
 
 考虑到 $x_j,y_j$ 均以 $n$ 为周期循环，有 $\large f_m=f_{qn}+f_i=q\times f_n+f_i$。
 
