--- a/_posts/2024-11-18-1.md
+++ b/_posts/2024-11-18-1.md
@@ -24,10 +24,16 @@ tags:
 $$
 f(i,j)=
 \left\{
-\begin{alignedat}{}
-\dfrac{i\cdot f(j,i\bmod j)}{i\bmod j}&i\bmod j\ne0\\
-\dfrac ij&i\bmod j=0\\
-\end{alignedat}
+\begin{aligned}
+\begin{aligned}
+&\dfrac{i\cdot f(j,i\bmod j)}{i\bmod j}\\
+&\dfrac ij
+\end{aligned}
+\begin{aligned}
+&i\bmod j\ne0\\\\
+&i\bmod j=0\\
+\end{aligned}
+\end{aligned}
 \right.
 $$
 求这张图的最小生成树。
@@ -332,7 +338,7 @@ int main(){
 
   要么埃式筛法 $\mathcal O\left(n\log_2\log_2 n\right)$，要么线性筛法 $\mathcal O\left(n\right)$。
 
-  筛出来以后就得到了每一个数的最小质因子，用该数除以最小值因子即可。
+  筛出来以后就得到了每一个数的最小质因子，用该数除以最小质因子即可。
 
 * 枚举最小约数
 
