--- a/_posts/2024-10-19-2.md
+++ b/_posts/2024-10-19-2.md
@@ -1,13 +1,12 @@
 ---
 layout: post
 title: "保留区"
-subtitle: "代替cfy"
+subtitle: ""
 date: 2024-10-19
 author: "TH911"
-header-img: "img/2024/10/006.jpeg"
-header-mask: 0.4
+header-style: text
 no-catalog: true
-published: false
 ---
 
 用于记录想说的话。
+
