--- a/_posts/2024-11-18-2.md
+++ b/_posts/2024-11-18-2.md
@@ -189,6 +189,10 @@ for(int i=0,j=-1;i<m;){
 
 特殊值 $-1$ 的用途，这种情况 $pre$ 指向第一个字符 $s_2[0]$ 即可。
 
+<span style="color: red;fontSize: 20px;"><b>注意：</b></span>**如果你的字符串下标从 $1$ 开始，特殊值请设置为 $0$**。
+
+因为在 `pre[++i]=++j` 中，若是 $j=-1$，则 $pre_{i+1}=0$，但是 $0$ 是一个空值。
+
 
 ## 例题 AC 代码
 
