--- a/_posts/2024-11-19-4.md
+++ b/_posts/2024-11-19-4.md
@@ -172,6 +172,7 @@ $$
 $$
 
 化系数为 $1$：
+
 $$
 \begin{pmatrix}
 1&2&4&\vert&17\\
@@ -179,7 +180,9 @@ $$
 0&1&8&\vert&26
 \end{pmatrix}
 $$
+
 再次相减：
+
 $$
 \begin{pmatrix}
 1&2&4&\vert&17\\
@@ -187,7 +190,9 @@ $$
 0&0&3&\vert&9
 \end{pmatrix}
 $$
+
 系数化为 $1$：
+
 $$
 \begin{pmatrix}
 1&2&4&\vert&17\\
@@ -195,7 +200,6 @@ $$
 0&0&1&\vert&3
 \end{pmatrix}
 $$
-
 
 至此，你可以发现此时的矩阵是一个“上三角“，即主对角线上系数均为 $1$，主对角线下均为 $0$。
 
@@ -221,7 +225,7 @@ $$
 
 放到高斯消元中，就是若某行前 $n$ 个数（所有系数）均为 $0$，但最终结果 $b_i$ 却不为 $0$，则无解。
 
-### 无数解
+#### 无数解
 
 一般来讲，”无数解“都是至最终解出来了一个恒等式。那么在一个方程中，若等式左边的未知项等于一个常数，则未知项的值是为 $0$ 的。那么未知项的系数也就是 $0$。即：若某行前 $n$ 个数和最终结果 $b_i$ 均为 $0$，则有无数解。
 
